Fix for bug 374872 (freeze/pause after clicking on a link). Patch by sspitzer, r/sr=peterv.